# prml

./: README.md  pyproject.toml
1_bayesian_curve_fitting/: bayesian_curve_fitting.ipynb  bayesian_curve_fitting.py  test_bayesian_curve_fitting.py
9_gaussian_mixture/src/: main.py
9_gaussian_mixture/src/gaussian_mixture/: gaussian_mixture.py
9_gaussian_mixture/src/test/: test_gaussian_mixture.ipynb  test_gaussian_mixture.py
