[tool.poetry]
name = "prml"
version = "0.1.0"
description = ""
authors = ["zeppfreak <zeppfreak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^21.9b0"
isort = "^5.9.3"
mypy = "^0.910"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.mypy]
# common
python_version = 3.9
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
# warning
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true

[tool.isort]
profile = "black"
line_length = 119

